Wed Oct 20 21:05:17 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* include/ruby/vm.h: MVM the next generation.

Local variables:
mode: change-log
add-log-time-format: (lambda ()
  (let* ((time (current-time))
	 (system-time-locale "C")
	 (diff (+ (cadr time) 32400))
	 (lo (% diff 65536))
	 (hi (+ (car time) (/ diff 65536))))
  (format-time-string "%a %b %e %H:%M:%S %Y" (list hi lo) t)))
indent-tabs-mode: t
tab-width: 8
end: