@@ -35,6 +35,8 @@
 #if RUBY_REVISION
 # ifdef RUBY_BRANCH_NAME
 #  define RUBY_REVISION_STR " "RUBY_BRANCH_NAME" "STRINGIZE(RUBY_REVISION)
+# elif defined RUBY_GITCOMMITID
+#  define RUBY_REVISION_STR " commit " RUBY_GITCOMMITID
 # else
 #  define RUBY_REVISION_STR " revision "STRINGIZE(RUBY_REVISION)
 # endif
