@@ -1,3 +1,9 @@
+Wed Oct 20 21:07:24 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* tool/file2lastrev.rb (self.output): git support.
+
+	* version.h: ditto.
+
 Wed Oct 20 21:05:17 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* include/ruby/vm.h: MVM the next generation.
